08Feb2023/allow-busybox-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-busybox-egress
spec:
  podSelector:
    matchLabels:
      app: busybox
      access-nginx: "true"

  policyTypes:
    - Egress

  egress:
    - to:
        - podSelector:
            matchLabels:
              app: nginx
    - ports:
        - port: 80
          protocol: TCP
